Issue #48 : Making header text wrap in resources boxes

--- a/themes/oslc/static/css/scss/pages/resources.scss
+++ b/themes/oslc/static/css/scss/pages/resources.scss
@@ -242,6 +242,7 @@
       }
 
       .title-content{
+        overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
       }
